--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-Hello Github Pages
+<!DOCTYPE html>
+<html>
+<head>
+	<title>JS Rocket</title>
+	<script type="text/javascript" src="js/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<h1>Hello js rocket</h1>
+	<a href="#">CLICK ME!</a>
+</body>
+</html>
 
-<script type="text/javascript">
-	console.log('Hello there friends');
-</script>
+
