--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Hello js rocket</h1>
-	<a href="#">CLICK ME!</a>
+	<a href="#" onclick="car.fly();">CLICK ME!</a>
 </body>
 </html>
 
